Refactor Pause Menu Button Placement and enhance HUD rendering with frame delta ticks